--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --primary-text-color: #757575;
     --title-text-color: #212121;
@@ -38,9 +37,11 @@ ul {
     margin: 0;
     padding: 0;
 }
+
 ul {
     list-style: none;
 }
+
 body {
     background: var(--primary-bt-color);
     color: var(--primary-text-color);
@@ -48,11 +49,13 @@ body {
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
 }
+
 img {
     display: block;
     max-width: 100%;
     height: auto;
 }
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -60,13 +63,16 @@ img {
     padding-right: 15px;
     width: 1200px;
 }
+
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .image-block {
     display: block;
 }
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -77,38 +83,48 @@ img {
     border: 0;
     clip: rect(0 0 0 0);
 }
+
 .link {
     text-decoration: none;
 }
+
 .text-center {
     text-align: center;
 }
+
 .heading {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
 }
+
 button {
     font-family: inherit;
     cursor: pointer;
 }
+
 .site-header {
     border-bottom: 1px solid var(--header-border-color);
 }
+
 .site-header .container {
     display: flex;
     align-items: center;
 }
+
 .site-nav {
     margin-left: 93px;
 }
+
 .site-nav .list {
     display: flex;
 }
+
 .site-nav .item:not(:first-child),
 .auth-nav .item:not(:first-child) {
     margin-left: 50px;
 }
+
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
@@ -122,40 +138,48 @@ button {
     transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
     position: relative;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: var(--accent-color);   
+    color: var(--accent-color);
 }
+
 .site-nav .link-current {
-    color: var(--accent-color);   
+    color: var(--accent-color);
 }
-.site-nav .link-current::after{
+
+.site-nav .link-current::after {
     content: "";
-        display: block;
-        width: 100%;
-        height: 5px;
-        border-radius: 2px;
-        background-color: var(--accent-color);
-        position: absolute;
-        left: 0px;
-        bottom: -1px;
-        opacity: 0;
-}
-.site-nav .link::after{
+    display: block;
+    width: 100%;
+    height: 5px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
     opacity: 0;
 }
+
+.site-nav .link::after {
+    opacity: 0;
+}
+
 .site-nav .link-current::after {
     opacity: 1;
 }
+
 .auth-nav .item {
     font-weight: 500;
     line-height: 1.14;
-    letter-spacing: 0.02em; 
+    letter-spacing: 0.02em;
 }
+
 .auth-nav .link:hover,
 .auth-nav .link:focus {
     color: var(--accent-color);
 }
+
 .auth-nav .link {
     display: flex;
     padding-top: 32px;
@@ -164,20 +188,24 @@ button {
     align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .auth-nav {
     display: flex;
     margin-left: auto;
     align-items: center;
 }
+
 .auth-nav .icon-n {
     --color4: currentColor;
-    margin-right: 10px;    
+    margin-right: 10px;
 }
+
 .icon {
     display: inline-block;
     align-items: center;
     justify-content: center;
 }
+
 .logo {
     font-family: Raleway, sans-serif;
     font-weight: 700;
@@ -186,10 +214,12 @@ button {
     text-decoration: none;
     color: var(--title-text-color-one);
 }
+
 .logo__accent {
     color: var(--accent-color);
     font-family: Raleway, sans-serif;
 }
+
 .slogan {
     max-width: 1600px;
     margin: 0 auto;
@@ -233,171 +263,292 @@ button {
     padding: 10px 32px;
     border: 0 solid transparent;
     border-radius: 4px;
-    transition-property:background-color;
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .button-primary:hover,
 .button-primary:focus {
-    background-color: var(--bg-color-button); 
+    background-color: var(--bg-color-button);
 }
 
-.backdrop {
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(1.1);
+    z-index: 3;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
     position: absolute;
+    width: 528px;
     top: 50%;
     left: 50%;
-
-    min-height: 581px;
-    min-width: 528px;
-
     background-color: var(--primary-bt-color);
-    color: var(--title-text-color);
-    transform: translate(-50%, -50%) scale(1);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
+    border-radius: 4px;
+    color: var(--title-text-color-one);
+    z-index: 5;
+    transform: translate(-50%, -50%);
+    padding: 40px 39px 40px 41px;
 }
 
-.modal__topic {
-    margin: 0px;
-    padding-bottom: 30px;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
 
-.modal__button-close {
+.btn-close {
     position: absolute;
     top: 8px;
     right: 8px;
     width: 30px;
     height: 30px;
-    border-radius: 50%;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--primary-bt-color);
-    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12);
-
-}
-.modal__button-close:hover,
-.modal__button-close:focus{
-   fill: var(--accent-color)
+    border-radius: 50%;
 }
 
-.svg-close {
-    width: 11px;
-    height: 11px;
-}
-.form {
-    padding: 40px;
-    width: 528px;
-}
-
-.form-field {
-    position: relative;
-    display: block;
-    color: var(--primary-text-color);
-    margin-bottom: 28px;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
-}
-
-.form-input {
-    min-width: 448px;
-    margin: 0px;
-    padding: 14px 42px;
-    font: inherit;
-    border-radius: 4px;
-    border: 1px solid var(--modal-input);
-    outline: none;
-}
-
-.form-input--comment {
+.close-wrap {
     width: 100%;
-    height: 120px;
-    resize: none;
+    height: auto;
+    fill: inherit;
 }
 
-.form-input:focus-within {
-    border: 1px solid var(--accent-color);
-}
-
-.svg-modal {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    top: 50%;
-    left: 16px;
-    transform: translateY(-50%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-}
-
-.form-label {
-    position: absolute;
-    top: 50%;
-    left: 42px;
-    transform: translateY(-50%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-label--comment {
-    position: absolute;
-    top: 12px;
-    left: 16px;
-    transform: translateY(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-field:focus-within>.form-label--comment {
-    transform: translateY(-35px);
-    color: var(--accent-color);
-}
-
-.form-input:not(:placeholder-shown)+.form-label--comment {
-    transform: translateY(-35px);
-}
-
-.form-field:focus-within>.svg-modal {
+.btn-close:hover,
+.btn-close:focus {
     fill: var(--accent-color);
 }
 
-.form-field:focus-within>.form-label {
-    transform: translate(-26px, -45px);
+.form__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+    margin-bottom: 12px;
+}
+
+.form__label {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+    display: flex;
+}
+
+.input-wrap {
+    position: relative;
+    fill: var(--title-text-color);
+    transition: fill cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-wrap:hover .form__input,
+.input-wrap:focus .form__input {
+    border-color: var(--accent-colorr);
+}
+
+.input-wrap:hover,
+.input-wrap:focus {
+    fill: var(--accent-color);
+}
+
+.order__form .icon {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    fill: inherit;
+}
+
+.form__input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    border-radius: 4px;
+    padding-left: 42px;
+    margin-top: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order .input-wrap:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.form__text {
+    height: 130px;
+    resize: none;
+    padding: 12px 16px;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.checkbox-container {
+    position: relative;
+    width: 16px;
+    height: 15px;
+    margin-right: 8.38px;
+    fill: var(--primary-bt-color);
+}
+
+.form__checkbox {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 7;
+}
+
+.checkbox-wrap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: 2px solid var(--title-text-color);
+    border-radius: 3px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-Vector {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    fill: inherit;
+}
+
+.form__checkbox:checked~.checkbox-wrap {
+    background-color: var(--accent-color);
+}
+
+.checkbox__text {
+    font-size:14px;
+    line-height: 1.71;
+    letter-spacing:0.03em;
+    color: var(--primary-text-color);
+}
+
+.checkbox__text-blue {
     color: var(--accent-color);
 }
 
-.form-input:not(:placeholder-shown)+.form-label {
-    transform: translate(-26px, -45px);
+.form__btn {
+    width: 200px;
+}
+.cards {
+    align-items: flex-start;
+    gap: 30px;
 }
 
+.card {
+    width: 270px;
+
+}
+
+.icon-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    width: 100%;
+    background-color: #F5F4FA;
+    border-radius: 4px;
+}
+
+.cards__title {
+    font-weight: 700;
+    font-size:14px;
+    line-height: 1.4;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
+.cards__text {
+    margin-top: 10px;
+    width: 270px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+
+.offers {
+    padding-top: 0;
+}
+
+
+.offers__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing:0.03em;
+
+}
+
+.offers__card {
+    position: relative;
+    width: 370px;
+    height: 294px;
+}
+
+
+.offers__img {
+    position: absolute;
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.offers__box {
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.offer__title {
+    font-weight: 700;
+    font-size:14px;
+    line-height: 1.4;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-bt-color);
+}
+.form-field-checkbox {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
 .form-field-checkbox {
     display: inline-flex;
     align-items: center;
@@ -415,7 +566,7 @@ button {
     clip: rect(0 0 0 0);
 }
 
-.icon {
+.icon-topic {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -426,7 +577,7 @@ button {
         0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
-.checkbox:checked+.icon {
+.checkbox:checked+.icon-topic {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
     background-image: url(../images/icon-check.svg);
@@ -447,6 +598,12 @@ button {
     color: var(--accent-color);
 }
 
+.button-div input {
+    margin: 0;
+    padding: 18px 12px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 .modal__button-send {
     display: inline-block;
     border-radius: 4px;
@@ -464,7 +621,6 @@ button {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
 .features-heading,
 .portfolio-heading {
     position: absolute;
@@ -478,6 +634,7 @@ button {
     clip-path: inset(50%);
     margin: -1px;
 }
+
 .features-list {
     display: flex;
     margin-left: calc(-1 * var(--list-items-gap));
@@ -489,6 +646,7 @@ button {
     background-color: var(--bg-color-gray);
     margin-bottom: 30px;
 }
+
 .thumb {
     display: flex;
     align-items: center;
@@ -503,13 +661,14 @@ button {
 .what-we-do {
     padding-top: 0;
 }
+
 .what-we-do__title {
     color: var(--title-text-color);
     font-weight: bold;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-      margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .about-us {
@@ -545,6 +704,7 @@ button {
     right: 50%;
     transform: translate(50%);
 }
+
 .team {
     background-color: var(--bg-color-gray);
 }
@@ -554,17 +714,20 @@ button {
     margin-top: 50px;
     margin-left: calc(-1 * var(--list-items-gap));
 }
+
 .section-items {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
 }
+
 .section-desc {
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.19;
 }
+
 .team-cards .item {
     flex-basis: calc(100% / 3 - var(--list-items-gap));
     margin-left: var(--list-items-gap);
@@ -617,6 +780,7 @@ button {
 .social-links__icon {
     --color1: currentColor;
 }
+
 .customer_title {
     color: var(--title-text-color);
     font-weight: bold;
@@ -661,6 +825,7 @@ button {
     --color1: currentColor;
     height: 50px;
 }
+
 .option {
     display: flex;
     justify-content: center;
@@ -697,6 +862,7 @@ button {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 3px 1px rgba(0, 0, 0, 0.1);
 }
+
 .card-set {
     display: flex;
     flex-wrap: wrap;
@@ -869,7 +1035,57 @@ button {
     line-height: 1.17;
     color: var(--title-text-color);
 }
+.subscribe__title {
+    color: var(--primary-bt-color);
+    font-weight: 700;
+    line-height: 1.14;
+    margin-left: 93px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+}
 
+.subscribe__input {
+    width: 358px;
+    height: 50px;
+    background-color: var(--foot-bg);
+    border: 1px solid var(--border-input);
+    border-radius: 4px;
+}
+
+.subscribe__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    background-color: var(--accent-color);
+    color: var(--primary-bt-color);
+    border-radius: 4px;
+    margin-left: 12px;
+    border: 1px solid var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe__button--icon::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/icon-send.svg);
+    background-size: contain;
+    margin-left: 10px;
+}
+
+
+.button-div {
+    display: flex;
+    align-items: baseline;
+    margin-left: 93px;
+}
+
+.svg-send__icon-send {
+    fill: var(--primary-bt-color);
+   margin-left: 10px;
+}
 
 
 
