--- a/css/styles.css
+++ b/css/styles.css
@@ -201,9 +201,7 @@ button {
 }
 
 .icon {
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
+    transition: fill cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo {
@@ -314,6 +312,9 @@ button {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--primary-bt-color);
     border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
 }
 
 .close-wrap {
@@ -342,30 +343,32 @@ button {
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--primary-text-color);
-    display: flex;
+   display: block;
+   text-align: left;
+   margin-bottom: 4px;
 }
 
 .input-wrap {
     position: relative;
-    fill: var(--title-text-color);
-    transition: fill cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 10px; 
 }
 
-.input-wrap:hover .form__input,
-.input-wrap:focus .form__input {
-    border-color: var(--accent-colorr);
-}
-
-.input-wrap:hover,
-.input-wrap:focus {
-    fill: var(--accent-color);
+.input-wrap:last-of-type {
+    margin-bottom: 20px;
 }
 
 .order__form .icon {
     position: absolute;
-    top: 16px;
-    left: 16px;
-    fill: inherit;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    fill: var(--title-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+}
+
+.form__input:focus + .icon {
+    fill: var(--accent-color);
 }
 
 .form__input {
@@ -377,15 +380,20 @@ button {
     letter-spacing: 0.01em;
     border-radius: 4px;
     padding-left: 42px;
-    margin-top: 4px;
+    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+.form__input:focus {
+    border-color: var(--accent-color);
+}
 .order .input-wrap:not(:last-child) {
     margin-bottom: 10px;
 }
 
 .form__text {
+    display: block;
     height: 130px;
     resize: none;
     padding: 12px 16px;
@@ -544,53 +552,45 @@ button {
     text-transform: uppercase;
     color: var(--primary-bt-color);
 }
+
 .form-field-checkbox {
-    display: inline-flex;
+    display:flex;
     align-items: center;
     margin-bottom: 30px;
-}
-.form-field-checkbox {
-    display: inline-flex;
-    align-items: center;
-    margin-bottom: 30px;
+    justify-content: center;
 }
 
 .checkbox {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
-    clip: rect(0 0 0 0);
-}
+  appearance: none;
+    display: block;
+        width: 16px;
+        height: 15px;
+        margin-right: 8px;
+        border: 2px solid var(--title-text-color);
+        border-radius: 2px;
+        background-size: 0;
+        transition: background-size 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-position 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.icon-topic {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-right: 8px;
-    border: 2px solid var(--title-text-color);
-    border-radius: 4px;
-    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12);
-}
 
-.checkbox:checked+.icon-topic {
+.icon-topic {}
+ 
+
+.checkbox:checked {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
     background-image: url(../images/icon-check.svg);
-    background-size: contain;
+    background-size: 16px 15px;
+    background-position: center;
 }
 
 .checkbox-text {
     font-size: 14px;
     line-height: 1.71;
-    margin: 0px;
-    padding: 0px;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+    user-select: none;
 }
 
 .checkbox-link {
@@ -598,12 +598,6 @@ button {
     color: var(--accent-color);
 }
 
-.button-div input {
-    margin: 0;
-    padding: 18px 12px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
 .modal__button-send {
     display: inline-block;
     border-radius: 4px;
@@ -612,13 +606,11 @@ button {
     border: 1px solid transparent;
     color: var(--primary-bt-color);
     background-color: var(--accent-color);
-    font-family: inherit;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
+    letter-spacing: 0.06em;
     text-decoration: none;
-    text-align: center;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .features-heading,
@@ -947,12 +939,7 @@ button {
     line-height: 1.87;
 }
 
-.button-div input {
-    margin: 0;
-    padding: 18px 12px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+
 .site-footer {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -1035,12 +1022,14 @@ button {
     line-height: 1.17;
     color: var(--title-text-color);
 }
+.subscribe{
+    margin-left: auto;
+}
 .subscribe__title {
     color: var(--primary-bt-color);
     font-weight: 700;
     line-height: 1.14;
-    margin-left: 93px;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     text-transform: uppercase;
 }
 
@@ -1050,6 +1039,8 @@ button {
     background-color: var(--foot-bg);
     border: 1px solid var(--border-input);
     border-radius: 4px;
+    padding: 15px 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .subscribe__button {
@@ -1064,6 +1055,10 @@ button {
     margin-left: 12px;
     border: 1px solid var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
 }
 
 .subscribe__button--icon::after {
@@ -1078,8 +1073,7 @@ button {
 
 .button-div {
     display: flex;
-    align-items: baseline;
-    margin-left: 93px;
+    align-items: center;
 }
 
 .svg-send__icon-send {
